# comfyui-anima-artist-browser

./: .gitignore  ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  DATA_SOURCE.md  MANUAL_REGRESSION_CHECKLIST.md  README.md  REFACTORING_NOTES.md  REFACTORING_PLAN.md  REFACTOR_PLAN.md  __init__.py  artist_data.py  local_auth.py  nodes.py  pyproject.toml  routes.py  routes_core.py  routes_favorites.py
js/: autocycle.js  browser.js  browser_bootstrap.js  browser_cards.js  browser_controller.js  browser_events.js  browser_favorites.js  browser_helpers.js  browser_renderers.js  browser_store.js  browser_template.js  browser_view.js  config.js  data.js  index.js  logger.js  node_runtime.js  node_ui.js  queue_behavior.js  queue_settings.js  slot_state.js  styles.js  swipe.js  toast.js  utils.js
services/: artist_repository.py  artist_sync.py  favorites_service.py  image_cache.py  preview_files.py
stores/: favorites_store.py
