[project]
name = "comfyui-anima-artist-browser"
description = "A quality-of-life node for ComfyUI focused on browsing anime artists locally, filling three artist slots, and iterating prompt variations for Anima-2b."
version = "1.0.9"
license = {text = "MIT License"}
dependencies = ["aiohttp"]
authors = [{ name = "Anima Artist Browser contributors" }]

[project.urls]
ReferenceData = "https://thetacursed.github.io/Anima-Style-Explorer"

[tool.comfy]
PublisherId = "anima-artist-browser"
DisplayName = "Anima Artist Browser"
